--- a/css/estilos.css
+++ b/css/estilos.css
@@ -17,7 +17,7 @@
 }
 .caja-columnas img{
     width: 100%;
-    height: 300px;
+    height: 600px;
 }
 .columna{
     flex: 1;
@@ -50,7 +50,6 @@
 }
 .Menu-superior li a:hover{
     color: #D7F8F1;
-    background-color:#7BB9CB;
     text-decoration: underline;
 }
 li a{
@@ -72,7 +71,7 @@ li a{
 form{
     padding: 15px;
 }
-input{
+input[type=text]{
     width: 100%;
     padding: 5px;
     border-radius: 5px;
@@ -80,4 +79,27 @@ input{
 textarea{
     width: 100%;
     height: 100px;
+}
+input[type=submit]{
+    width: 100%;
+    background-color: rgb(20, 200, 30, 0.3);
+    padding: 10px;
+    color: #09744C;
+}
+input[type=submit]:hover{
+    background-color: rgb(20, 200, 30, 0.8);
+    cursor: pointer;    
+}
+.Footer{
+    background-color: #AAD9E6;
+    align-self: flex-end;
+}
+li a img{
+    width: 32px;
+}
+li a img:hover{
+    opacity: 30%;
+}
+.derechos{
+    padding: 15px;
 }
