--- a/css/estilos.css
+++ b/css/estilos.css
@@ -37,7 +37,6 @@
 .Menu-superior li{
     display: inline;
     padding: 5px;
-    border-right: solid 2px black;
 }
 .Menu-superior li:last-child{
     border-right: none;
@@ -47,6 +46,9 @@
     font-weight: bold;
     text-align: right;
     padding: 20px;
+}
+.Borde-derecho li{
+    border-right: 1px solid black;
 }
 .Menu-superior li a:hover{
     color: #D7F8F1;
@@ -58,7 +60,7 @@ li a{
 .banner{
     background-image:url(../imagenes/working-process-banner-flat-style-3254401.jpg) ;
     width: 100;
-    height: 290px;
+    height: 300px;
     background-repeat: no-repeat;
     background-size: 100%;
     background-position-y:50%;
